[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/enemigos/enemigo3.png" type="Texture" id=1]
[ext_resource path="res://componentes/enemigos/enemigo3/enemigo3.gd" type="Script" id=2]
[ext_resource path="res://fx/enemigos/muerte.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.0
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 599.144

[node name="enemigo3" type="RigidBody2D" groups=["enemigo"]]
collision_layer = 2
collision_mask = 4
gravity_scale = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="boca1" type="Position2D" parent="."]
position = Vector2( 0, 19 )

[node name="enemigo_collider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemigo_collider"]
shape = SubResource( 2 )

[node name="area_provocadora" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_provocadora"]
shape = SubResource( 3 )

[node name="balas" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 9.53674e-07, -9.53674e-07 )
scale = Vector2( 1.9, 2.1 )
__meta__ = {
"_edit_lock_": true
}

[node name="fx_muerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
